# trade-optimizer

./: .gitignore  Cargo.toml  README.md
data_generator/: README.md
dataset_generator/: download.py
dataset_generator/src/: download.py
docs/: ## STOPLOSS
scripts/data_collector/: downloader
src/: backtest.rs  brkga.rs  candlestick.rs  evolution.rs  main.rs  utils.rs
src/backtest/: strategy.rs  trade.rs  trade_rule.rs
src/indicators/: average_true_range.rs  exponential_moving_average.rs  mod.rs  moving_average_convergence_divergence.rs  relative_strength_index.rs  simple_moving_average.rs  traits.rs  true_range.rs
