[package]
name = "trade_optimizer"
version = "0.1.0"
edition = "2021"
authors = ["Victor Ferreira Teixeira da Silva <victorfts@id.uff.br>"]

[dependencies]
csv = "1.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde_json = "1.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 3


